--- a/Report/Texture_analysis.Rmd
+++ b/Report/Texture_analysis.Rmd
@@ -144,6 +144,18 @@ All models are evaluated using 10×100 k-fold cross validation (10 folds and 100
 
 Machine Learning models commonly use a 0.5 classification threshold to assign categories. However, classification thresholds can be modified to balance the ability of model to detect true positives and avoid false positives which are respectively referred as sensitivity and specificity. The receiver operating characteristic (ROC) curve is employed to systematically evaluate the ratio of detected true positives while avoiding false positives [@bradley_use_1997; @spackman_signal_1989]. The ROC curve allows visually analyzing model performance and calculating the AUC, which ranges from 1 (perfect classifier) to 0.5 (random classifier). The AUC is a measure of performance derived from the receiver operating characteristic (ROC) curve. The ROC curve is used to evaluate the ratio of detected true positives while avoiding false positives [@bradley_use_1997; @spackman_signal_1989]. The ROC curve makes it possible to visually analyze model performance and calculate the AUC, which ranges from 1 (perfect classifier) to 0.5 (random classifier). The ROC and AUC are commonly applied in two-class problems and their extension to multiclass problems is usually done through pairwise analysis.   
 
+In the case of multiclass problems, the AUC provides two groups of values: first, each class obtains an AUC value using a “one vs all” approach; second, a general AUC value of model performance is obtained from the average of each class AUC [@hand_simple_200; @robin_proc_2011]. In the case of the ROC curve, individual curves of each class are plotted using the previously mentioned “one vs all” approach. The present study tested 10 different models with a three-class classification problem which would involve a total of 30 different ROC curves (three curves per 10 models). In this paper, we have provided only the three ROC curves of the best model. When analyzing lithic materials, the use of thresholds to guarantee true positives and avoid false positives is of special interest. The use of thresholds better indicates the accuracy of a model considering these probability values. In the present study we have slightly variated the interpretation of the AUC values [@lantz_machine_2019] with intervals interpreted as follows:    
+
+  * 0.9 to 1: outstanding   
+  * 0.85 to 0.9: excellent    
+  * 0.8 to 0.85: good    
+  * 0.75 to 0.8: acceptable    
+  * 0.7 to 0.75: fair   
+  * 0.6 to 0.7: poor    
+  * 0.5 to 0.6: no discrimination     
+  
+Strong levels of correlation are present between the variables of the present study. The issue of multicollinearity in classification remains a matter of debate. It is commonly pointed that for multiple linear regressions, collinearity affects the interpretation of coefficients (variables), but does not affect the quality of the predictions [@james_introduction_2013]. Additional arguments indicate that if the collinearity between variables of the training set is also present in the test set, it should not be considered a problem. In the present study variables presenting perfect levels of collinearity (mean and Ra) are excluded from the training of machine learning models, and feature importance is explored among non-correlated features. After evaluating and determining the best model, an additional model on PCA values was trained in order to determine possible overfitting.    
+
 ```{r, message=FALSE, warning=FALSE}
 
 # Check for collinearity of the data
@@ -158,8 +170,16 @@ ggcorrplot::ggcorrplot(r,
   ggsci::scale_fill_gsea(reverse = FALSE) +
   theme(legend.position = "none",
         axis.text = element_text(color = "black"))
-
 ```
+
+
+## **3. Results**   
+
+### **3.1 Texture metrics**   
+
+
+
+
 
 
 
