--- a/Report/References_Styles/References.bib
+++ b/Report/References_Styles/References.bib
@@ -1152,3 +1152,48 @@ In this paper we explain the development of this methodology using a small sampl
 	langid = {english},
 	file = {Chan et al. - 2022 - Mitigating the Multicollinearity Problem and Its M.pdf:C\:\\Users\\Guillermo\\Zotero\\storage\\KGL84PB3\\Chan et al. - 2022 - Mitigating the Multicollinearity Problem and Its M.pdf:application/pdf},
 }
+
+@article{alin_multicollinearity_2010,
+	title = {Multicollinearity},
+	volume = {2},
+	doi = {10.1002/wics.84},
+	pages = {370--374},
+	number = {3},
+	journaltitle = {Wiley Interdisciplinary Reviews: Computational Statistics},
+	author = {Alin, Aylin},
+	date = {2010},
+	note = {Publisher: Wiley Online Library},
+	file = {Alin - 2010 - Multicollinearity.pdf:C\:\\Users\\Guillermo\\Zotero\\storage\\9IAPKGII\\Alin - 2010 - Multicollinearity.pdf:application/pdf},
+}
+
+@article{paul_multicollinearity_2006,
+	title = {Multicollinearity: Causes, effects and remedies},
+	volume = {1},
+	shorttitle = {Multicollinearity},
+	pages = {58--65},
+	number = {1},
+	journaltitle = {{IASRI}, New Delhi},
+	author = {Paul, Ranjit Kumar},
+	date = {2006},
+	note = {Publisher: Citeseer},
+	file = {Paul - 2006 - Multicollinearity Causes, effects and remedies.pdf:C\:\\Users\\Guillermo\\Zotero\\storage\\28IBXKN7\\Paul - 2006 - Multicollinearity Causes, effects and remedies.pdf:application/pdf},
+}
+
+@article{chan_mitigating_2022,
+	title = {Mitigating the Multicollinearity Problem and Its Machine Learning Approach: A Review},
+	volume = {10},
+	issn = {2227-7390},
+	url = {https://www.mdpi.com/2227-7390/10/8/1283},
+	doi = {10.3390/math10081283},
+	shorttitle = {Mitigating the Multicollinearity Problem and Its Machine Learning Approach},
+	abstract = {Technologies have driven big data collection across many ﬁelds, such as genomics and business intelligence. This results in a signiﬁcant increase in variables and data points (observations) collected and stored. Although this presents opportunities to better model the relationship between predictors and the response variables, this also causes serious problems during data analysis, one of which is the multicollinearity problem. The two main approaches used to mitigate multicollinearity are variable selection methods and modiﬁed estimator methods. However, variable selection methods may negate efforts to collect more data as new data may eventually be dropped from modeling, while recent studies suggest that optimization approaches via machine learning handle data with multicollinearity better than statistical estimators. Therefore, this study details the chronological developments to mitigate the effects of multicollinearity and up-to-date recommendations to better mitigate multicollinearity.},
+	pages = {1283},
+	number = {8},
+	journaltitle = {Mathematics},
+	shortjournal = {Mathematics},
+	author = {Chan, Jireh Yi-Le and Leow, Steven Mun Hong and Bea, Khean Thye and Cheng, Wai Khuen and Phoong, Seuk Wai and Hong, Zeng-Wei and Chen, Yen-Lin},
+	urldate = {2023-01-26},
+	date = {2022-04-12},
+	langid = {english},
+	file = {Chan et al. - 2022 - Mitigating the Multicollinearity Problem and Its M.pdf:C\:\\Users\\Guillermo\\Zotero\\storage\\833MBUEN\\Chan et al. - 2022 - Mitigating the Multicollinearity Problem and Its M.pdf:application/pdf},
+}
